# orderbook-rs

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  config.toml  entrypoint.sh
backend-local-compose/: README.md  run_services.bat  run_services.sh  stop_services.sh
backend-local-compose/orderbook-api/: docker-compose.yml
backend-local-compose/orderbook-api/orderbook-migrations/: entrypoint.sh
backend-local-compose/orderbook-api/orderbook-migrations/migrations/2022-04-15-00001_orders/: up.sql
protos/: orderbookservice.proto
src/: config.rs  error.rs  lib.rs
src/context/: mod.rs
src/grpc/: client.rs  error.rs  handler.rs  mod.rs  orderbook.rs  protos.rs  server.rs
src/http/: filters.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/sqlx/: config.rs  error.rs  mod.rs  pool.rs
tests/: orderbook-client.rs  orderbook-engine.rs
